# kairos

./: .flake8  .gitignore  404.html  Dockerfile  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  testing_requirements.txt
.github/workflows/: black.yml  flake8.yml  tests.yml
api/: index.html
app/: __init__.py  config.py
app/agents/: __init__.py  analyzer_agent.py  censor_agent.py  course_gen_agent.py  editor_agent.py  iterative_course_gen_agent.py  plan_gen_agent.py  prompt_gen_agent.py  searcher_agent.py  summarizer_agent.py
app/ai_core/: __init__.py  analyzer_agent.py  censor_agent.py  check_need_test.py  course_gen_agent.py  editor_agent.py  iterative_course_gen_agent.py  iterative_course_generation_agent.py  link_validate_agent.py  parser_agent.py  plan_by_prompt.py  plan_gen_agent.py  prompt_by_theme.py  prompt_by_theme_agent.py  prompt_gen_agent.py  searcher_agent.py  (+3 more)
config_settings/: index.html
database/: index.html
description/: index.html
docs/: README.md  api.md  config_settings.md  database.md  description.md  dotenv_variables.md  exceptions.md  getting_started.md  local_setup.md  mkdocs.md  restapi.md  structure.md  tests.md  ui_examples.md
dotenv_variables/: index.html
exceptions/: index.html
getting_started/: index.html
local_setup/: index.html
mkdocs/: index.html
requirements/: prod.txt
restapi/: index.html
search/: search_index.json
structure/: index.html
tests/: index.html  test_api.py  test_auth.py  test_database.py  test_forms_validation.py  test_status_codes.py
ui_examples/: index.html
(+37 files in other folders)
